update readme; change version number to 0.9.0

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
     "manifest_version": 2,
-    "version": "1.0",
+    "version": "0.9.0",
     "name": "histcontext",
     "description": "View a history item in context",
     "browser_action": {
 	"default_popup": "popup/histcontext.html"
     },
-    "permissions": ["history"]
+    "permissions": ["history"],
+    "browser_specific_settings": {
+	"gecko": {
+	    "id": "{214b5f96-b8da-48ef-b3d9-9269b00e608a}"
+	}
+    }
 }
